Added support for credits dialog. To use insert this into main.xml:     <item         android:id="@+id/action_credits"         android:title="@string/action_credits"/> The string "action_credits" is the title of the menu entry. The string "credits_dlg_title" is the title of the credits dialog. The string "credits_page_name" is the filename (without path but with extension) of the credits html file. The credits html files must be located in "../assets/html/credits".